--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 spring.application.name=tp_sb
 server.port=8090
 server.servlet.context-path=/api
-
-spring.datasource.url=jdbc:sqlite:tp_sb.db?journal_mode=WAL&busy_timeout=30000
-spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.datasource.hikari.maximum-pool-size=1
-spring.datasource.hikari.connection-timeout=30000
+spring.datasource.url=jdbc:postgresql://localhost:5432/educatalog
+spring.datasource.username=educatalog
+spring.datasource.password=supersecurepassword
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.orm.jdbc.bind=TRACE
