--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 logging.level.org.hibernate.SQL=DEBUG
+jwt.secret=change-me-to-a-very-long-secret-at-least-32-bytes
