--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -9,32 +9,14 @@ spring:
           enabled: true
         routes:
           - id: auth-route
-            uri: lb://auth-service
+            uri: lb://catalog-service
             predicates:
-              - Path=/api/auth/**
-
-  datasource:
-    url: jdbc:postgresql://localhost:5432/educatalog
-    username: educatalog
-    password: supersecurepassword
-    driver-class-name: org.postgresql.Driver
-
-  jpa:
-    database-platform: org.hibernate.community.dialect.SQLiteDialect
-    hibernate:
-      ddl-auto: update
-    open-in-view: false
-
+              - Path=/api/**
 server:
   port: 8080
-  servlet:
-    context-path: /api
 
-logging:
-  level:
-    org:
-      hibernate:
-        SQL: DEBUG
 
-jwt:
-  secret: change-me-to-a-very-long-secret-at-least-32-bytes
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
