Gateway discovered with Eureka

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -7,14 +7,14 @@ spring:
       discovery:
         locator:
           enabled: true
-        routes:
-          - id: auth-route
-            uri: lb://catalog-service
-            predicates:
-              - Path=/api/**
+      routes:
+        - id: catalog-route
+          uri: lb://catalog-service
+          predicates:
+            - Path=/api/**
+
 server:
   port: 8080
-
 
 eureka:
   client:
